# open-vector-tile

./: .dependency-cruiser.cjs  .gitignore  .npmignore  .prettierrc  Cargo.toml  IDEATION.md  LICENSE  README.md  TODO  bacon.toml  build-wasm.ts  build.ts  bun.lockb  bunfig.toml  cobertura.xml  columnCache.json  eslint.config.mjs  motivation.md  package.json  rustfmt.toml  tests.ts  tsconfig.eslint.json  tsconfig.json  typedoc.json
.github/ISSUE_TEMPLATE/: 2-bug-report.md  3-feature-request.md
.github/workflows/: coveralls.yml  pages.yml  test.yml
.helix/: languages.toml
assets/: weave-technique.sketch
benchmarks/: .gitignore  compression.ts  mltVSovt.ts  ovtVScovt.ts  ovtVScovtDiff.ts
docs/: hierarchy.html  index.html  modules.html
docs/assets/: highlight.css  navigation.js  search.js
docs/classes/: BaseVectorLayer.html  BaseVectorLine.html  BaseVectorLine3D.html  BaseVectorLines3DFeature.html  BaseVectorLinesFeature.html  BaseVectorPoint3DFeature.html  BaseVectorPoints3DFeature.html  BaseVectorPointsFeature.html  BaseVectorPolys3DFeature.html  BaseVectorPolysFeature.html  BaseVectorTile.html  ColumnCacheReader.html  ColumnCacheWriter.html  ElevationData.html  MapboxVectorFeature.html  MapboxVectorLayer.html  OVectorFeatureBase.html  OVectorFeatureBase2D.html  OVectorFeatureBase3D.html  OVectorFeatureLineBase.html  OVectorLayer.html  OVectorLines3DFeature.html  OVectorLinesFeature.html  OVectorPoints3DFeature.html  OVectorPointsFeature.html  OVectorPolys3DFeature.html  OVectorPolysFeature.html  Pbf.html  VectorFeatureBase.html  VectorFeatureLinesBase.html  VectorFeaturePointsBase.html  VectorFeaturePolysBase.html  VectorTile.html
docs/enums/: OColumnName.html
docs/functions/: columnDecode.html  columnEncode.html  convertMapboxElevationData.html  convertTerrariumElevationData.html  createShapeFromData.html  decodeExtent.html  decodeOffset.html  decodeShape.html  decodeValue.html  encodeExtent.html  encodeOffset.html  encodeShape.html  encodeValue.html  fromMapboxVectorFeature.html  fromS2JSONFeature.html  readFeature.html  serializeS2.html  updateShapeFromData.html  validateTypes.html  writeElevationData.html  writeElevationTile.html  writeFeature.html  writeOVFeature.html  writeOVLayer.html  writeOVTile.html
docs/interfaces/: BaseGeometry.html  ColumnIndex.html  ColumnValueRef.html  ElevationInput.html  Point.html  Point3D.html  Polys3DGeometry.html  PolysGeometry.html  PositionReference.html  RawData.html  S2JSONLayerGuide.html  Shape.html  ShapePair.html  ShapePrimitive.html  Tag.html  VectorLine3DWithOffset.html  VectorLineWithOffset.html
docs/types/: BBox-1.html  BBox.html  BBox3D.html  BaseVectorFeature.html  BaseVectorGeometry.html  ColumnValue.html  ColumnValueRead.html  ColumnValueReadSimple.html  ColumnValueRef.html  Extents.html  Lines3DGeometry.html  LinesGeometry.html  OColumnBaseChunk.html  OColumnBaseWrite.html  OColumnBaseWriteSimple.html  OColumnDouble.html  OColumnDoubleWrite.html  OColumnIndices.html  OColumnIndicesWrite.html  OColumnNumbers.html  OColumnPoints.html  OColumnPoints3D.html  OColumnPoints3DWrite.html  OColumnPointsWrite.html  OColumnSigned.html  OColumnSignedWrite.html  OColumnString.html  OColumnStringWrite.html  OColumnUnsigned.html  OColumnUnsignedWrite.html  OColumnValues.html  OColumnValuesWrite.html  OProperties.html  OValue.html  OVectorFeature.html  OldVectorFeatureType.html  Points3DGeometry.html  PointsGeometry.html  Primitive.html  PrimitiveShapes.html  (+24 more)
ovtile/: lib.rs  util.rs  vector_tile.rs
ovtile/mapbox/: value.rs
ovtile/open/: shape.rs
rust/: Cargo.toml  geometry.rs  lib.rs  util.rs  vector_feature.rs  vector_tile.rs
rust-wasm/: Cargo.toml  lib.rs
rust/base/: mod.rs  s2json_impl.rs  vector_feature.rs  vector_layer.rs  vector_tile.rs
rust/mapbox/: mod.rs  vector_feature.rs  vector_layer.rs  vector_tile.rs
rust/open/: column_cache.rs  elevation_data.rs  grid_layer.rs  image_data.rs  image_layer.rs  mod.rs  shape.rs  (+2 more)
src/: ieee754.ts  index.ts  pbf.ts  util.ts  vectorTile.spec.ts  vectorTile.ts  vectorTile.wasm.ts  vectorTileWASM.ts
test/: parseMapbox.test.ts  parseOldS2.test.ts  parseOpen.test.ts  parseS2.test.ts  pbf.test.ts  util.test.ts
tests/: geometry.rs  ieee754.test.ts  mod.rs  parseMapbox.test.ts  parseOldS2.test.ts  parseOpen.test.ts  parseS2.test.ts  pbf.test.ts  util.rs  util.test.ts  wasm.test.ts  writeMVT.test.ts  writeS2T.test.ts
tools/: analysis.ts  buildCoverage.ts  convertTestFixtures.ts  converter.ts  no-covt-converter.ts
vector-tile-spec/: CHANGELOG.md  LICENSE  README.md
(+371 files in other folders)
