[package]
name = "open-vector-tile"
version = "0.1.0"
edition = "2021"
authors = ["Craig O'Connor <oconnorct1@gmail.com>"]
description = "This library reads/writes The Open Vector Tiles 1.0 Specification"
documentation = "https://docs.rs/open-vector-tile"
homepage = "https://github.com/OpenS2/open-vector-tile"
repository = "https://github.com/OpenS2/open-vector-tile"
readme = "README.md"
categories = ["encoding", "wasm", "embedded", "no-std"]
keywords = ["open", "vector", "tile", "gis", "low-cost-code"]
license = "MIT"
# Include only specific files and directories
# include = ["Cargo.toml", "Cargo.lock", "README.md", "LICENSE"]
exclude = [
    "/assets",
    "/benchmarks",
    "/docs",
    "/test",
    "/tools",
    "/src",
]

[lib]
name = "ovtile"
path = "rust/lib.rs"
bench = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pbf = "0.1.5"

[dev-dependencies]
# tarpaulin = "*"

[features]
default = ["std"]
std = []

[profile.bench]
opt-level = 3
