[package]
name = "open-vector-tile"
version = "1.10.0"
rust-version = "1.91.0"
edition = "2024"
authors = ["Craig O'Connor <oconnorct1@gmail.com>"]
description = "This library reads/writes The Open Vector Tiles 1.0 Specification"
documentation = "https://docs.rs/open-vector-tile"
homepage = "https://github.com/Open-S2/open-vector-tile"
repository = "https://github.com/Open-S2/open-vector-tile"
readme = "README.md"
categories = ["encoding", "wasm", "embedded", "no-std"]
keywords = ["open", "vector", "tile", "gis", "low-cost-code"]
license = "MIT"
# Include only specific files and directories
# include = ["Cargo.toml", "Cargo.lock", "README.md", "LICENSE"]
exclude = [
    "/assets",
    "/benchmarks",
    "/docs",
    "/tests",
    "/tools",
    "/src",
]

[features]
default = []
wasm = ["lol_alloc"]

[lib]
name = "open_vector_tile"
path = "rust/lib.rs"
crate-type = ["lib"]
# crate-type = ["lib", "cdylib"]
bench = true

[dependencies]
# Open S2 dependencies
pbf = "1"
s2json = "1"
# External dependencies
libm = "0.2"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
# WASM dependencies
lol_alloc = { version = "0.4.1", optional = true }

[dev-dependencies]
wasm-opt = { version = "0.116.1" }

[profile.bench]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
