[package]
name = "open-vector-tile-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]
path = "./lib.rs"
bench = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
open-vector-tile = { path = "../rust" }
lol_alloc = { version = "0.4.1" }
wasm-opt = { version = "0.116.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
target = "wasm32-unknown-unknown"
